force-app/main/default/objects/DigitalRepositoryAPIV2Settings__c/DigitalRepositoryAPIV2Settings__c.object-meta.xml
<CustomObject>
	<customSettingsType>List</customSettingsType>
	<description>This setting is used to hold configurations of Digital Repository V2 API.</description>
	<label>Digital Repository API V2 Settings</label>
</CustomObject>