force-app/main/default/objects/DigitalRepositoryAPIV2Settings__c/fields/BlurImage__c.field-meta.xml
<CustomField>
	<fullName>BlurImage__c</fullName>
	<defaultValue>false</defaultValue>
	<description>Flag to indicate whether to obscure faces and any text detected for privacy reasons.</description>
	<inlineHelpText>Mark to true if we have to blur the images.</inlineHelpText>
	<label>Blur Image</label>
	<type>Checkbox</type>
</CustomField>