force-app/main/default/objects/DigitalRepositoryAPIV2Settings__c/fields/BucketName__c.field-meta.xml
<CustomField>
	<fullName>BucketName__c</fullName>
	<description>Name of the digital repository bucket holding the object.</description>
	<inlineHelpText>Provide S3 bucket name that is related to the attachment type.</inlineHelpText>
	<label>Bucket Name</label>
	<length>255</length>
	<type>Text</type>
</CustomField>