force-app/main/default/objects/DigitalRepositoryAPIV2Settings__c/fields/Default__c.field-meta.xml
<CustomField>
	<fullName>Default__c</fullName>
	<defaultValue>false</defaultValue>
	<description>This field helps to Identify the default configuration of image.</description>
	<inlineHelpText>Only one default record is expected. Please check if there are any existing default records before checking.</inlineHelpText>
	<label>Default</label>
	<type>Checkbox</type>
</CustomField>