force-app/main/default/objects/DigitalRepositoryAPIV2Settings__c/fields/FileExtensionType__c.field-meta.xml
<CustomField>
    <fullName>FileExtensionType__c</fullName>
    <description>Used to hold the file extension type so that it can be used to append the extension to guid if it is not having any extension.</description>
    <inlineHelpText>Only enter the value if you are sure that the guid is not having file extension. else, you may receive a failed response.</inlineHelpText>
    <label>File Extension Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>