force-app/main/default/objects/DigitalRepositoryAPIV2Settings__c/fields/ResizePercentage__c.field-meta.xml
<CustomField>
	<fullName>ResizePercentage__c</fullName>
	<description>Percentage original image should be resized to.</description>
	<inlineHelpText>Enter % from 1 - 100.</inlineHelpText>
	<label>Resize Percentage</label>
	<precision>3</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>