force-app/main/default/objects/DigitalRepositoryAPIV2Settings__c/fields/ResizeThreshold__c.field-meta.xml
<CustomField>
    <fullName>ResizeThreshold__c</fullName>
    <description>Resize image only if the image size is more than the threshold value in Kilobytes</description>
    <inlineHelpText>Set threshold in Kilobytes, for example:1000</inlineHelpText>
    <label>Resize Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>